@@ -448,6 +448,9 @@ Other Changes
 * SOLR-8484: refactor update/SolrIndexConfig.LOCK_TYPE_* into core/DirectoryFactory.LOCK_TYPE_*
   (Christine Poerschke)
 
+* SOLR-8504: (IndexSchema|SolrIndexConfig)Test: private static finals for
+  solrconfig.xml and schema.xml String literals. (Christine Poerschke)
+
 ==================  5.4.0 ==================
 
 Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release
